# python-project-template

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  tasks.py
.github/workflows/: build.yml
mlpt/: __init__.py  constants.py  main.py
ppt/: __init__.py  constants.py  main.py
requirements/: dev.in  dev.txt  prod.txt
tests/integration/: conftest.py  test_integration.py
tests/unit/: conftest.py  test_unit.py
