[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "python-project-template"
readme = "README.md"
authors = [
    {name = "Christoph Stumpf", email = "stumpf.christoph@gmail.com"},
]
classifiers = [
]
dynamic = ["version", "description"]
requires-python = ">=3.8"

[tool.flit.module]
name = "ppt"

[tool.black]
line-length = 120
exclude = "(.eggs|.git|.hg|.mypy_cache|.venv|_build|buck-out|build|dist)"

[tool.mypy]
python_version = 3.8
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]

[tool.coverage.run]
source = ["ppt"]
